# rtsp_cv

./: CMakeLists.txt  main.cpp
src/1.GetStream/: main.cpp  stdthread.cpp
src/2.Calib/: CMakeLists.txt  VID5.xml  in_VID5.xml
